[package]
name = "mercusys-reboot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Disable random, making encryption deterministic as possible.
no_rand = []

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
reqwest_cookie_store = "0.6.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
num = "0.4"
rand = "0.8"
aes = "0.8"
cbc = { version = "0.1.2", features = ["alloc"] }
md5 = "0.7"
base64 = "0.21"
